职业病字典修改成系统字典,人员记录相关分组信息